        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=18308
        SVG Encoding error with fill attribute

        This is caused by problems with data: URL loading. Besides what is fixed by this patch,
        I filed <rdar://problem/5845875> for CFNetwork.

        While at it, fixed a related javascript: URL issue.

        Tests: fast/loader/data-url-encoding-html.html
               fast/loader/data-url-encoding-svg.html
               fast/loader/javascript-url-encoding.html

        * platform/KURL.cpp:
        (WebCore::KURL::parse): Fix a FIXME, use UTF-8 instead of dropping high bytes. This fixes
        javascript: URL handling.
        (WebCore::encodeRelativeString): Like mailto: URLs, data: ones are all UTF-8. Restructured
        the code to not search for "#" if both parts are to be encoded as UTF-8 anyway.



Canonical link: https://commits.webkit.org/26431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@33578 268f45cc-cd09-0410-ab3c-d52691b4dbfc